update Bicicleta, criação de testes